--- a/src/css/scss/_footer.scss
+++ b/src/css/scss/_footer.scss
@@ -1,12 +1,11 @@
 #footer {
   margin-top: 50px;
   overflow: hidden;
-
-  background: #354c9e;
+  background: #70004d;
   background: linear-gradient(
-    266deg,
-    rgba(53, 76, 158, 1) 0%,
-    rgba(30, 36, 85, 1) 100%
+    94deg,
+    rgba(112, 0, 77, 1) 0%,
+    rgba(166, 0, 116, 1) 100%
   );
 
   ul {
