--- a/src/css/scss/_header.scss
+++ b/src/css/scss/_header.scss
@@ -4,11 +4,11 @@
   display: flex;
   justify-content: space-between;
   gap: 15px;
-  background: #354c9e;
+  background: #70004d;
   background: linear-gradient(
-    266deg,
-    rgba(53, 76, 158, 1) 0%,
-    rgba(30, 36, 85, 1) 100%
+    94deg,
+    rgba(112, 0, 77, 1) 0%,
+    rgba(166, 0, 116, 1) 100%
   );
   // min-height: 135px;
   transition: all 0.3s ease;
