--- a/src/css/scss/_variable.scss
+++ b/src/css/scss/_variable.scss
@@ -9,9 +9,9 @@ $xlg: "only screen and (max-width: 1400px)";
 $xxlg: "only screen and (max-width: 1500px)";
 
 :root {
-  --main: #e50525;
-  --main1: #5fb7ff;
-  --main2: #221b48;
+  --main: #770054;
+  --main1: #e1115f;
+  --main2: #56013c;
   --main3: #eb6608;
   --black: #000000;
   --light-black: #5e5e5e;
