--- a/src/css/go-main.css
+++ b/src/css/go-main.css
@@ -1,7 +1,7 @@
 :root {
-  --main: #e50525;
-  --main1: #5fb7ff;
-  --main2: #221b48;
+  --main: #770054;
+  --main1: #e1115f;
+  --main2: #56013c;
   --main3: #eb6608;
   --black: #000000;
   --light-black: #5e5e5e;
@@ -59,7 +59,6 @@ h6 a,
 h1,
 .h1 {
   font-size: 68px;
-  color: var(--main2);
   line-height: 100%;
 }
 @media only screen and (max-width: 768px) {
@@ -72,7 +71,6 @@ h1,
 h2,
 .h2 {
   font-size: 31px;
-  color: var(--main2);
 }
 @media only screen and (max-width: 768px) {
   h2,
@@ -84,7 +82,6 @@ h2,
 h3,
 .h3 {
   font-size: 28px;
-  color: var(--main2);
 }
 @media only screen and (max-width: 768px) {
   h3,
@@ -96,7 +93,6 @@ h3,
 h4,
 .h4 {
   font-size: 24px;
-  color: var(--main2);
 }
 @media only screen and (max-width: 768px) {
   h4,
@@ -108,7 +104,6 @@ h4,
 h5,
 .h5 {
   font-size: 20px;
-  color: var(--main2);
 }
 @media only screen and (max-width: 768px) {
   h5,
@@ -120,7 +115,6 @@ h5,
 h6,
 .h6 {
   font-size: 16px;
-  color: var(--main2);
 }
 @media only screen and (max-width: 768px) {
   h6,
@@ -817,8 +811,8 @@ body.archive .entry-header h1 {
   display: flex;
   justify-content: space-between;
   gap: 15px;
-  background: #354c9e;
-  background: linear-gradient(266deg, rgb(53, 76, 158) 0%, rgb(30, 36, 85) 100%);
+  background: #70004d;
+  background: linear-gradient(94deg, rgb(112, 0, 77) 0%, rgb(166, 0, 116) 100%);
   transition: all 0.3s ease;
 }
 @media only screen and (max-width: 1200px) {
@@ -924,8 +918,8 @@ body.archive .entry-header h1 {
 #footer {
   margin-top: 50px;
   overflow: hidden;
-  background: #354c9e;
-  background: linear-gradient(266deg, rgb(53, 76, 158) 0%, rgb(30, 36, 85) 100%);
+  background: #70004d;
+  background: linear-gradient(94deg, rgb(112, 0, 77) 0%, rgb(166, 0, 116) 100%);
 }
 #footer ul {
   list-style: none;
@@ -1416,8 +1410,8 @@ body.single .entry-content a {
 
 .btn-main {
   padding: 10px 20px;
-  background-color: var(--main);
-  border: 2px solid var(--main) !important;
+  background-color: var(--main1);
+  border: 2px solid var(--main1) !important;
   color: var(--white) !important;
   font-weight: 400;
   border: none;
