--- a/src/css/scss/_btn.scss
+++ b/src/css/scss/_btn.scss
@@ -1,7 +1,7 @@
 .btn-main {
   padding: 10px 20px;
-  background-color: var(--main);
-  border: 2px solid var(--main) !important;
+  background-color: var(--main1);
+  border: 2px solid var(--main1) !important;
   color: var(--white) !important;
   font-weight: 400;
   border: none;
