--- a/blocks/etapy/etapy.css
+++ b/blocks/etapy/etapy.css
@@ -86,7 +86,7 @@
   border-radius: 10px;
   text-transform: uppercase;
   background-color: var(--main2);
-  color: var(--main);
+  color: var(--white);
   margin: 0 auto;
   margin-bottom: 50px;
 }
