--- a/blocks/hero/hero.scss
+++ b/blocks/hero/hero.scss
@@ -71,8 +71,13 @@
     width: 100%;
     height: calc(100vh - 200px);
     min-height: 430px;
+    @media #{$md} {
+      height: auto;
+      // min-height: initial;
+    }
     @media #{$sm} {
       min-height: initial;
+      height: auto;
     }
   }
   .b-hero__content {
@@ -94,12 +99,19 @@
       transform: translate(50px, 0);
     }
     @media #{$sm} {
-      top: 0;
+      position: relative;
+      padding: 20px 0 70px;
+      text-align: center;
       left: 50%;
       transform: translate(-50%, 20px);
-      text-align: center;
-      padding: 0;
     }
+    // @media #{$sm} {
+    //   top: 0;
+    //   left: 50%;
+    //   transform: translate(-50%, 20px);
+    //   text-align: center;
+    //   padding: 0;
+    // }
     .wp-block-group {
       @media #{$sm} {
         justify-self: center;
