--- a/src/css/go-main.css
+++ b/src/css/go-main.css
@@ -781,7 +781,7 @@ body.archive .entry-header h1 {
 }
 
 .navbar__brand {
-  max-width: 180px;
+  max-width: 200px;
   width: 100%;
   height: auto;
   position: relative;
@@ -795,12 +795,13 @@ body.archive .entry-header h1 {
   }
 }
 .navbar__brand a {
-  padding: 10px 20px;
+  padding: 0px 20px;
   display: block;
   width: 100%;
   height: auto;
 }
-.navbar__brand a svg {
+.navbar__brand a svg,
+.navbar__brand a img {
   width: 100%;
   height: auto;
 }
