--- a/src/css/scss/_header-brand.scss
+++ b/src/css/scss/_header-brand.scss
@@ -1,5 +1,5 @@
 .navbar__brand {
-  max-width: 180px;
+  max-width: 200px;
   width: 100%;
   height: auto;
   position: relative;
@@ -11,12 +11,13 @@
   }
   a {
     // position: absolute;
-    padding: 10px 20px;
+    padding: 0px 20px;
     display: block;
     width: 100%;
     height: auto;
 
-    svg {
+    svg,
+    img {
       width: 100%;
       height: auto;
       // position: absolute;
