--- a/blocks/item-download/item-download.css
+++ b/blocks/item-download/item-download.css
@@ -2,7 +2,7 @@
   --main: #770054;
   --main1: #e1115f;
   --main2: #56013c;
-  --main3: #eb6608;
+  --main3: #e1115f;
   --black: #000000;
   --light-black: #5e5e5e;
   --body: #f5f5f5;
