--- a/src/css/scss/_header-partners.scss
+++ b/src/css/scss/_header-partners.scss
@@ -7,7 +7,7 @@
   // background-color: var(--white);
   padding: 20px 20px 20px 80px;
   transition: all 0.3s ease;
-  width: 40%;
+  // width: 40%;
   @media #{$slg} {
     background-color: #fff;
     order: 1;
